# UniRand-TrapCalculators

.devcontainer/: devcontainer.json
StreamlitGitHub/CrossODT/: CrossODT.py  README.md  requirements.txt
StreamlitGitHub/fermiqp-physics-main/: .gitignore  README.md  pyproject.toml  settings.py
StreamlitGitHub/fermiqp-physics-main/examples/: 1-optical_lattice.ipynb  10-rss_asymmetry.ipynb  11-berek_compensator.ipynb  12-int_mod_spectroscopy.ipynb  13-geometry_beam.ipynb  14-objective_plots.ipynb  15-zeeman_shift.ipynb  16-bandstructure.ipynb  16b-bandstructure-emery-model.ipynb  2-vis_geometry.ipynb  3-raman_cooling.ipynb  4-sheet_trap.ipynb  5-superlattices.ipynb  6-stim-brillouin-scattering.ipynb  7-infrared-lattices.ipynb  8-doublewells.ipynb  9-interfering_beams.ipynb
StreamlitGitHub/fermiqp-physics-main/fermiqp/: experiments.py  high_t_expansion.py  lattice.py  loaddata.py  non_interacting.py  opticallattice.py
StreamlitGitHub/fermiqp-physics-main/fermiqp/datas/: lattice1d.npz  lattice2d.npz  scatteringlengths.txt  zeeman_2P.npz  zeeman_2S.npz
StreamlitGitHub/fermiqp-physics-main/fermiqp/qolab/: fulldiag.py  wigner.py
StreamlitGitHub/fermiqp-physics-main/fermiqp/streamlit/: cli.py  fermiqp-app.py  fermiqp-app0.py  high_t_expansion_tab.py  non_interacting_tab.py  opticallattice.py
StreamlitGitHub/fermiqp-physics-main/projects/: Lithium_ySL.py  lattice_focal.ipynb  rsc_harmonic-osc.ipynb  ySuperLatticePlanning.ipynb
StreamlitGitHub/fermiqp-physics-main/projects/double_well_potentials/: doublewells.py  dw.ipynb  dw_imbalances.py  dw_waists.py
(+1 files in other folders)
