[project]
name = "fermiqp"          
version = "0.2.2"            
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "requests",
    "streamlit",
]


[project.scripts]
fermiqp-app = "fermiqp.streamlit.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

